--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/websockets/wscat"
+    "url": "https://github.com/barchart/wscat"
   },
   "keywords": [
     "wscat",
